--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = rmlab-http-client
-version = 0.0.4
+version = 0.1.0
 author = Anton Rey
 author_email = aanton.rv@gmail.com
 description = RMLab module wrapping a HTTP client providing auth and async utilities.
@@ -11,7 +11,7 @@ project_urls =
   Bug Tracker = https://github.com/antonrv/rmlab-py-http-client/issues
 classifiers =
   License :: OSI Approved :: MIT License
-  Development Status :: 1 - Planning
+  Development Status :: 4 - Beta
   Programming Language :: Python
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3 :: Only
