--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 
-name: Unit testing, integration testing, build documentation, release
+name: Workflow to test and release to PyPi
 
 on: [push, pull_request]
 
@@ -7,6 +7,7 @@ jobs:
   test-unit:
     name: Unit test job
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release'
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -35,6 +36,7 @@ jobs:
   publish-test:
     name: Publish test job
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/release'
     needs: test-unit
     steps:
     - name: Checkout
@@ -58,6 +60,7 @@ jobs:
   publish-final:
     name: Publish job
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/release'
     needs: publish-test
     steps:
     - name: Checkout
